--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body * {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
   font-family: 'Libre Baskerville', sans-serif;
-  text-align:center;
+  text-align:left;
   font-weight: 400;
   color: #EFEFEF;
 }
