--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body * {
   font-family: 'Libre Baskerville', sans-serif;
   text-align:left;
   font-weight: 400;
-  color: #EFEFEF;
+  color:#382F2D;
+  background-color: #EFEFEF;
 }
 
 h1 {
